# vibescreening

./: .gitignore  README.md  ad_fuzzer.py  antidict.py  completed_sa.py  extad.py  main.py  pyproject.toml  pyrightconfig.json  suffix_automaton.py  suffix_tree.py  test.py  test_antidict.py  tmp.md  visualize.py
output/screening/: f_depth0.bi_map.txt  f_depth0.dot  f_depth1.dot  f_depth2.bi_map.txt  g_depth0.bi_map.txt  g_depth0.dot
output/screening_g/: g_depth0.bi_map.txt  g_depth0.dot
output/screening_test/: f_depth1.bi_map.txt  f_depth2.dot
refal/: main.py
refal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
refal/lexer/: lexer.py
refal/parser/: parser.py
refal/sema/: abstractizer.py  analyze.py  annotated_dfa.py  common.py  file_log.py  k_subwords.py  metrics.py  pattern_sltl.py  regex_dfa.py  screening.py  screening_analyzer.py  trace_log.py
refal/test/refal_screenings/: hard.ref  simple  simple.ref
refal/test_programs/: tiny  tiny.ref
tests/: test_screening_analyzer.py
