[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refal"
version = "0.1.0"
description = "Refal lexer, parser, and semantic utilities"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["refal*"]
